--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row vertically-centered">
         <div class="span12 horizontally-centered">
           <p>
-            Welcome back! Let's dive into <a href="weeks/2/index.html">week 2</a>.
+            Welcome back! Pull the latest code from me and let's hop into <a href="weeks/2/index.html">week 3</a>.
           </p>
         </div>
       </div>
