--- a/people/projmgmt/2/this-week.html
+++ b/people/projmgmt/2/this-week.html
@@ -2,27 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ccaeJS</title>
+    <title>Week 2 Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class.">
+    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. This is the workspace for week 2 exercises.">
     <meta name="author" content="Adam B. Goldstein">
 
-    <link href="assets/stylesheets/ccaejs.css" rel="stylesheet">
+    <script type="text/javascript" src="this-week.js"></script>
+    <link href="../../assets/stylesheets/ccaejs.css" rel="stylesheet">
 
     <!-- Standard HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="../../assets/images/favicon.ico">
   </head>
   <body>
     <div class="container">
       <div class="row vertically-centered">
         <div class="span12 horizontally-centered">
-          <p>
-            Welcome back! It's week 4. Pull down the latest code and <a href="weeks/4/index.html">let's get started</a>.
-          </p>
+          <h1>Week 2 Exercises</h1>
         </div>
       </div>
     </div>
