--- a/weeks/5/this-week-answers.html
+++ b/weeks/5/this-week-answers.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Week 5 Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. This is the workspace for week 5 exercises.">
+    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. These are the answers to Week 5 exercises.">
     <meta name="author" content="Adam B. Goldstein">
 
-    <script type="text/javascript" src="this-week.js"></script>
+    <script type="text/javascript" src="this-week-answers.js"></script>
     <link href="../../assets/stylesheets/ccaejs.css" rel="stylesheet">
 
     <!-- Standard HTML5 shim, for IE6-8 support of HTML5 elements -->
