Adding a little more week 6 content.

--- a/weeks/7/index.html
+++ b/weeks/7/index.html
@@ -55,9 +55,73 @@
 
     <!-- Hello again -->
     <section class="slide">
-      <h2></h2>
+      <h2>Welcome back!</h2>
       <ul>
-        <li></li>
+        <li>Thanks for bearing with me last week. New Orleans was great.</li>
+        <li>If you missed it, we were doing CodeAcademy tracks together over Skype
+          <ul>
+            <li><a href="http://www.codecademy.com/courses/javascript-beginner-en-Bthev-mskY8?curriculum_id=506324b3a7dffd00020bf661">Function review</a></li>
+            <li><a href="http://www.codecademy.com/courses/javascript-beginner-en-9Sgpi?curriculum_id=506324b3a7dffd00020bf661">Array review and Object intro</a> (revisiting this today)</li>
+            <li><a href="http://www.codecademy.com/courses/web-beginner-en-bay3D?curriculum_id=50a3fad8c7a770b5fd0007a1">jQuery intro for the adventurous</a></li>
+          </ul>
+        </li>
+        <li>Documentation on <a href="https://developer.mozilla.org/en-US/docs/JavaScript/Reference">core JavaScript</a></li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>Any new business?</h2>
+      <ul>
+        <li>Burning questions?</li>
+        <li>Things you've forgotten in two weeks?</li>
+        <li>We're in our final month; anything you really want between now and the end?</li>
+      </ul>
+    </section>
+
+
+    <!-- Data Structures -->
+    <section class="slide">
+      <h2>Multidimensional arrays</h2>
+      <ul>
+        <li>Exactly like every other language. We're nesting arrays inside other arrays.</li>
+        <li>They don't come up extremely frequently (in my experience). Often there's more a combination of nested Objects within Arrays.</li>
+      </ul>
+
+<pre class="prettyprint linenums">
+// Create a list of lists
+</pre>
+    </section>
+
+
+    <!-- Objects -->
+    <section class="slide">
+      <h2>Multidimensional arrays</h2>
+      <ul>
+        <li>Exactly like every other language. We're nesting arrays inside other arrays.</li>
+        <li>They don't come up extremely frequently (in my experience). Often there's more a combination of nested Objects within Arrays.</li>
+      </ul>
+
+<pre class="prettyprint linenums">
+// Create an object
+</pre>
+    </section>
+
+
+    <!-- Exercises -->
+    <section class="slide">
+      <h2>Go forth and solve</h2>
+      <ul>
+        <li>Start with CodeAcademy. Run through the <a href="http://www.codecademy.com/courses/javascript-beginner-en-9Sgpi?curriculum_id=506324b3a7dffd00020bf661">data structure track</a>. It will visit what we just talked about.</li>
+        <li>Once you're done, continue on to exercises from me in Week 7.</li>
+      </ul>
+    </section>
+
+
+    <!-- So long! -->
+    <section class="slide">
+      <h2>Thanks!</h2>
+      <ul>
+        <li>See you next week!</li>
       </ul>
     </section>
 
